@@ -71,13 +71,13 @@ OBJ	= \
 
 all:	libtiff.lib libtiff.dll
 
-config.h:
-	copy config.h.vc config.h
+tif_config.h:
+	copy tif_config.h.vc tif_config.h
 
-libtiff.lib:	config.h $(OBJ)
+libtiff.lib:	tif_config.h $(OBJ)
 	$(AR) /out:libtiff.lib $(OBJ) $(LIBS)
 
-libtiff.dll:	config.h $(OBJ)
+libtiff.dll:	tif_config.h $(OBJ)
 	$(LD) /dll /def:libtiff.def /out:libtiff.dll \
 	/implib:libtiff_i.lib $(OBJ) $(LIBS)
 	
